Added content transitions

--- a/index.html
+++ b/index.html
@@ -20,20 +20,31 @@
 
 <body class="font-Inter bg-gradient from-red-100 to-red-400 bg-gradient-to-b w-screen h-screen">
     <nav class="flex p-6 shadow-lg bg-white">
-        <img src="./src/assets/images/icon.png" class="h-8 mr-2" />
-        <h1 class="text-xl font-semibold">Pokémon Wiki</h1>
+        <span id="nav--logo" class="flex cursor-pointer">
+            <img src="./src/assets/images/icon.png" class="h-8 mr-2" />
+            <h1 class="text-xl font-semibold">Pokémon Wiki</h1>
+        </span>
     </nav>
     <div class="w-full md:w-1/2 md:mx-auto h-auto bg-white mt-1 md:mt-3 p-5">
-        <h1>Welcome to Pokémon Wiki, a place where you can learn more about the world and the species that roam it.
-            There over a thousand different kinds of Pokémon species each unique in their own way. Simply search the
-            name of a particular Pokémon speicies and learn about its stats so that you may build a well rounded team.
-        </h1>
+        <div id="home--content">
+            <img class="h-[300px] mx-auto" src="./src/assets/images/samurott.png" />
+            <h1>Welcome to <span class="font-semibold">Pokémon Wiki</span>, a place where you can learn more about the
+                world
+                and the species that roam it.
+                There over a thousand different kinds of Pokémon species each unique in their own way. Simply search the
+                name of a particular Pokémon speicies and learn about its stats so that you may build a well rounded
+                team.
+            </h1>
+        </div>
+        <div id="pokemon--content" class="text-center">Some Pokemon Content</div>
         <div class="mt-8 grid grid-cols-5">
             <input id="pname-input" class=" p-2 border-2 outline-none rounded-l-xl col-span-3 md:col-span-4" type="text"
                 placeholder="Pokemon Species" />
-            <button class="border-2 rounded-r-xl p-2 col-span-2 md:col-span-1 bg-green-300">Search</button>
+            <button id="search--btn"
+                class="border-2 rounded-r-xl p-2 col-span-2 md:col-span-1 bg-green-300 text-center">Search</button>
         </div>
     </div>
+    <script src="./src/js/index.js"></script>
 </body>
 
 </html>
