Added dyanmic type listing

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
         <!--POKEMON CONTENT-->
         <div id="pokemon--content" class="text-center">
             <h1 class="text-5xl font-Phudu font-light tracking-wider" id="pokemon--species"></h1>
-            <div id="pokemon--type"></div>
+            <div class="flex justify-center" id="pokemon--type"></div>
             <img class="h-[300px] mx-auto" id="pokemon--image" />
         </div>
         <!--CONSOLE CONTENT-->
         <div class="mt-8 grid grid-cols-5 lg:w-2/3 mx-auto">
-            <input id="pname-input" class=" p-2 border-2 outline-none rounded-l-xl col-span-3 md:col-span-4" type="text"
+            <input id="pname-input" class="p-2 border-2 outline-none rounded-l-xl col-span-3 md:col-span-4" type="text"
                 placeholder="Pokemon Species" />
             <button id="search--btn"
                 class="border-2 rounded-r-xl p-2 col-span-2 md:col-span-1 bg-green-300 text-center">Search</button>
