Added stats data and enter key function

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1 class="text-xl font-semibold">Pokémon Wiki</h1>
         </span>
     </nav>
-    <div class="w-full md:w-2/3 md:mx-auto h-auto bg-white mt-1 md:mt-3 p-5 md:rounded-2xl">
+    <div class="w-full md:w-2/3 md:mx-auto h-auto bg-white mt-1 md:mt-3 p-5 md:rounded-2xl mb-14">
         <!--HOMEPAGE CONTENT-->
         <div id="home--content">
             <img class="h-[300px] mx-auto" src="./src/assets/images/samurott.png" />
@@ -41,13 +41,15 @@
         </div>
         <!--POKEMON CONTENT-->
         <div id="pokemon--content" class="text-center relative">
-            <h1 class="text-5xl font-Phudu font-light tracking-wider" id="pokemon--species"></h1>
+            <h1 class="text-5xl font-Phudu font-normal tracking-wider" id="pokemon--species"></h1>
             <div class="flex justify-center" id="pokemon--type"></div>
             <img class="h-[300px] mx-auto" id="pokemon--image" />
             <div class="flex justify-center">
                 <h3 id="pokemon--height" class="mx-3 font-semibold font-Phudu"></h3>
                 <h3 id="pokemon--weight" class="mx-3 font-semibold font-Phudu"></h3>
             </div>
+            <h3 id="pokemon--stats-header" class=" m-2 font-semibold text-lg font-Phudu">Statistics</h3>
+            <ul id="pokemon--stats" class="font-semibold text-lg m-2 font-Phudu mx-auto w-2/5"></ul>
         </div>
         <!--CONSOLE CONTENT-->
         <div class="mt-8 grid grid-cols-5 lg:w-2/3 mx-auto">
@@ -60,9 +62,11 @@
     <div
         class="bg-normal bg-fire bg-grass bg-electric bg-ice bg-fighting bg-poison bg-ground bg-flying bg-psychic bg-bug bg-rock bg-ghost bg-dark bg-dragon bg-steel bg-fairy bg-water">
     </div>
+    <!--
     <footer class="bg-slate-300 absolute bottom-0 right-0 left-0 text-end"><small>Copyright 2023, All Rights
             Reserved</small>
     </footer>
+-->
     <script src="./src/js/index.js"></script>
 </body>
 
