--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1 class="text-xl font-semibold">Pokémon Wiki</h1>
         </span>
     </nav>
-    <div class="w-full md:w-2/3 md:mx-auto h-auto bg-white mt-1 md:mt-3 p-5 md:rounded-2xl mb-14">
+    <div class="w-full md:w-2/3 md:mx-auto h-auto bg-white mt-2 md:mt-3 p-5 md:rounded-2xl mb-14">
         <!--HOMEPAGE CONTENT-->
         <div id="home--content">
             <img class="h-[300px] mx-auto" src="./src/assets/images/samurott.png" />
@@ -49,15 +49,22 @@
                 <h3 id="pokemon--weight" class="mx-3 font-semibold font-Phudu"></h3>
             </div>
             <h3 id="pokemon--stats-header" class=" m-2 font-semibold text-lg font-Phudu">Statistics</h3>
-            <ul id="pokemon--stats" class="font-semibold text-lg m-2 font-Phudu mx-auto w-2/5"></ul>
+            <ul id="pokemon--stats" class="font-semibold text-lg m-2 font-Phudu mx-auto md:w-2/5 w-3/4"></ul>
         </div>
         <!--CONSOLE CONTENT-->
         <div class="mt-8 grid grid-cols-5 lg:w-2/3 mx-auto">
             <input id="pname-input" class="p-2 border-2 outline-none rounded-l-xl col-span-3 md:col-span-4" type="text"
-                placeholder="Pokemon Species" />
+                placeholder="Pokemon Species or ID" />
             <button id="search--btn"
                 class="border-2 rounded-r-xl p-2 col-span-2 md:col-span-1 bg-green-300 text-center">Search</button>
         </div>
+        <div id="prev-next" class="grid grid-cols-2 gap-3">
+            <button id="prev--btn" class="border-2 rounded-xl p-2 my-3 bg-red-600 text-white">Previous</button>
+            <button id="next--btn" class="border-2 rounded-xl p-2 my-3 bg-indigo-600 text-white">Next</button>
+        </div>
+        <button id="rand--btn"
+            class="border-2 rounded-xl p-2 w-full my-1 bg-gradient-to-r from-indigo-600 to-red-600 text-white">Random
+            Pokémon</button>
     </div>
     <div
         class="bg-normal bg-fire bg-grass bg-electric bg-ice bg-fighting bg-poison bg-ground bg-flying bg-psychic bg-bug bg-rock bg-ghost bg-dark bg-dragon bg-steel bg-fairy bg-water">
